// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FastImage (Android) renders a non-existing defaultSource 1`] = `
<View
  style={
    [
      {
        "overflow": "hidden",
      },
      {
        "height": 44,
        "width": 44,
      },
    ]
  }
>
  <FastImageView
    defaultSource={null}
    resizeMode="cover"
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</View>
`;

exports[`FastImage (Android) renders a normal defaultSource 1`] = `
<View
  style={
    [
      {
        "overflow": "hidden",
      },
      {
        "height": 44,
        "width": 44,
      },
    ]
  }
>
  <FastImageView
    defaultSource={null}
    resizeMode="cover"
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</View>
`;

exports[`FastImage (Android) renders a normal defaultSource when fails to load source 1`] = `
<View
  style={
    [
      {
        "overflow": "hidden",
      },
      {
        "height": 44,
        "width": 44,
      },
    ]
  }
>
  <FastImageView
    defaultSource={null}
    resizeMode="cover"
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</View>
`;

exports[`FastImage (iOS) renders 1`] = `
<View
  style={
    [
      {
        "overflow": "hidden",
      },
      {
        "height": 44,
        "width": 44,
      },
    ]
  }
>
  <FastImageView
    defaultSource={null}
    resizeMode="cover"
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</View>
`;

exports[`FastImage (iOS) renders Image with fallback prop 1`] = `
<View
  style={
    [
      {
        "overflow": "hidden",
      },
      {
        "height": 44,
        "width": 44,
      },
    ]
  }
>
  <Image
    resizeMode="cover"
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "tintColor": undefined,
        },
      ]
    }
  />
</View>
`;

exports[`FastImage (iOS) renders a normal Image when not passed a uri 1`] = `
<View
  style={
    [
      {
        "overflow": "hidden",
      },
      {
        "height": 44,
        "width": 44,
      },
    ]
  }
>
  <FastImageView
    defaultSource={null}
    resizeMode="cover"
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</View>
`;

exports[`FastImage (iOS) renders defaultSource 1`] = `
<View
  style={
    [
      {
        "overflow": "hidden",
      },
      {
        "height": 44,
        "width": 44,
      },
    ]
  }
>
  <FastImageView
    defaultSource="[object Object]"
    resizeMode="cover"
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</View>
`;
